# sensors_start

./: README.en.md  README.md  README_zh.md  ohos.build
etc/init/: BUILD.gn  hsensors.cfg  hsensors.rc
