# Copyright (c) Huawei Technologies Co., Ltd. 2019-2019. All rights reserved.
# Description: add sensors boot rc file compile script
# Author: ningyanlei
# Create: 2019-08-30

import("//build/ohos.gni")

################################################################################

ohos_prebuilt_etc("sensors.rc") {
  if (use_musl) {
    source = "sensors.cfg"
  } else {
    source = "sensors.rc"
  }
  relative_install_dir = "init"
  subsystem_name = "sensors"
  part_name = "start"
}
